Add and update array, stack, and binary search solutions